# yacl_zkp_sigmaprotocol

yacl/crypto/base/ecc/: ecc_spi.cc
yacl/crypto/primitives/zkp/: BUILD.bazel  DiffieHellmanTriple.cc  PedersenCommitmentOpen.cc  Schnorr.h  SigmaDlogEquality.cc  SigmaDlogEquality.h  SigmaProtocol.cc  SigmaProtocol.h  SigmaProtocol_test.cc  hash.h  test_Sigma.cc
